# join-the-siege

./: .gitignore  README.md  pyproject.toml
pipeline/: pipeline.yml
src/: app.py  classifier.py  utils.py
src/classifiers/: contents.py  filename.py  openai.py
src/services/: classify.py
tests/: conftest.py  test_app.py
tests/classifiers/: test_contents.py  test_filename.py
